Fixed overflow

--- a/css/style.scss
+++ b/css/style.scss
@@ -252,6 +252,7 @@ img {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    overflow-x: hidden;
 
     .download-text {
         width: 100%;
